creusot/tests/should_fail/prusti/deny_zombies/old_deref.stderr
error: `std::boxed::Box<T>` cannot be moved from `'old` to `'curr` without becoming a zombie `creusot_contracts::__stubs::__prusti::Zombie<std::boxed::Box<T>>
 --> old_deref.rs:5:12
  |
5 | #[ensures(*old(x) == *result)]
  |            ^^^^^^
  |
note: the lint level is defined here
 --> old_deref.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error[creusot]: invalid box dereference of zombie expression
 --> old_deref.rs:5:12
  |
5 | #[ensures(*old(x) == *result)]
  |            ^^^^^^

error: aborting due to 2 previous errors

